--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/flex": "^1.17 || ^2.0",
         "symfony/framework-bundle": "5.4.*",
         "symfony/http-client": "5.4.*",
+        "symfony/runtime": "6.4.*",
         "symfony/yaml": "5.4.*"
     },
     "config": {
@@ -24,7 +25,8 @@
         },
         "sort-packages": true,
         "allow-plugins": {
-            "symfony/flex": true
+            "symfony/flex": true,
+            "symfony/runtime": true
         }
     },
     "autoload": {
