--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "sweetrdf/easyrdf": "^1.8",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "7.1.*",
+        "symfony/dom-crawler": "7.1.*",
         "symfony/dotenv": "7.1.*",
         "symfony/flex": "^1.17 || ^2.0",
         "symfony/framework-bundle": "7.1.*",
