composer recipes:update symfony/framework-bundle

--- a/.env
+++ b/.env
@@ -16,5 +16,5 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=292c28555acb1f2cde39644687d36ca4
+APP_SECRET=
 ###< symfony/framework-bundle ###
