--- a/composer.json
+++ b/composer.json
@@ -64,5 +64,8 @@
             "allow-contrib": false,
             "require": "7.2.*"
         }
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.69"
     }
 }
