--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,7 @@
         }
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.69"
+        "friendsofphp/php-cs-fixer": "^3.69",
+        "phpstan/phpstan": "^2.1"
     }
 }
