--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
         "ext-iconv": "*",
         "sweetrdf/easyrdf": "^1.8",
         "symfony/apache-pack": "^1.0",
-        "symfony/console": "7.3.*",
-        "symfony/dom-crawler": "7.3.*",
-        "symfony/dotenv": "7.3.*",
-        "symfony/flex": "^1.17 || ^2.0",
-        "symfony/framework-bundle": "7.3.*",
-        "symfony/http-client": "7.3.*",
-        "symfony/runtime": "7.3.*",
-        "symfony/yaml": "7.3.*"
+        "symfony/console": "7.4.*",
+        "symfony/dom-crawler": "7.4.*",
+        "symfony/dotenv": "7.4.*",
+        "symfony/flex": "^2.0",
+        "symfony/framework-bundle": "7.4.*",
+        "symfony/http-client": "7.4.*",
+        "symfony/runtime": "7.4.*",
+        "symfony/yaml": "7.4.*"
     },
     "config": {
         "platform": {
@@ -68,7 +68,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.3.*"
+            "require": "7.4.*"
         }
     },
     "require-dev": {
